less/bootstrap-theme/dropdowns.less
//
// Dropdowns
// --------------------------------------------------

.dropdown-md {
    .btn {
        border-color: transparent;
        text-transform: none;
        min-width: initial;
        margin-bottom: 0;
        .border-top-radius(0);
        .border-bottom-radius(0);
        .transition(all @dropdown-transition);

        &:hover,
        &:focus {
            background-color: @dropdown-bg-hover;
        }

        &.btn-ripple {
            .ripple {
                background-color: @btn-default-ripple-bg;
            }
        }
    }

    .dropdown-toggle {
        padding-right: 45px;

        .caret {
            position: absolute;
            margin-top: 8px;
            right: 8px;
            .transition(@dropdown-transition);
        }
    }

    .btn + .dropdown-toggle {
        padding-right: 8px;

        .caret {
            position: inherit;
            margin-top: auto;
            right: auto;
        }
    }

    .btn:focus,
    .btn:active,
    &.open .dropdown-toggle {
        background-color: @dropdown-bg !important;
        border-bottom-color: transparent;
        .box-shadow(@dropdown-shadow);
    }

    &.open {
        .dropdown-toggle {
            &.btn-ripple {
                background-color: @dropdown-bg !important;
            }

            .caret {
                .rotate(180deg);
            }
        }
    }

    .dropdown-md-variant(default, @dropdown-default-btn-border);
    .dropdown-md-variant(primary, @dropdown-primary-btn-border);
    .dropdown-md-variant(accent, @dropdown-accent-btn-border);
    .dropdown-md-variant(success, @dropdown-success-btn-border);
    .dropdown-md-variant(info, @dropdown-info-btn-border);
    .dropdown-md-variant(warning, @dropdown-warning-btn-border);
    .dropdown-md-variant(danger, @dropdown-danger-btn-border);

    .btn:disabled,
    .btn.disabled {
        border-bottom-color: @dropdown-default-btn-border;
        .box-shadow(none);

        &:hover,
        &:focus {
            background-color: transparent;
        }
    }

    .btn + .dropdown-toggle:disabled,
    .btn + .dropdown-toggle.disabled {
        &,
        &:hover,
        &:focus {
            border-left-color: fade(@dropdown-default-btn-border, 23%);
        }
    }

    .dropdown-menu {
        margin: 0 1px;
    }
}

.dropdown-menu {
    background-clip: none;
    min-width: 190px;
    .border-top-radius(0);
    .border-bottom-radius(0);
    .box-shadow(@dropdown-shadow);
}

.dropdown-menu {
    li.dropdown-header {
        margin-top: 0;
        padding: 3px 16px;
        cursor: default;
    }

    > li > a,
    li > a {
        padding: 0 16px;
        display: block;
        line-height: 48px;
    }

    > li.dropdown {
        > a:after {
            display: block;
            content: " ";
            float: right;
            width: 0;
            height: 0;
            border-color: transparent;
            border-style: solid;
            border-width: 5px 0 5px 5px;
            border-left-color: @dropdown-link-color;
            margin-top: 5px;
            margin-right: -10px;
        }

        > a:hover:after,
        > a:focus:after {
            border-left-color: @dropdown-link-hover-color;
        }

        > a > .caret {
            display: none;
        }
    }

    > li.open {
        > a:after {
            border-left-color: @dropdown-link-hover-color;
            .rotate(90deg);
        }
    }
    
    .dropdown {
        > a:after {
            .rotate(90deg);
        }

        > .dropdown-menu {
            display: block;
            position: relative;
            width: 100%;
            border-left: none;
            border-right: none;
            border-bottom: none;
            padding-left: 20px;
            .border-top-radius(0);
            .box-shadow(none);
        }

        &.open {
            > a:after {
                border-left-color: inherit;
            }
        }
    }
}

.dropdown-header {
    color: @dropdown-header-color;
    margin-top: 6px;
    cursor: pointer;

    i {
        font-size: @font-size-base;
        margin-right: @caret-width-base;
        vertical-align: middle;
    }
}

// Menu 2 col
// --------------------------------------------------

.col-menu-2 {
    min-width: 410px;
    padding-bottom: 10px;
    padding-top: 7px;

    > li:first-child ul {
        border-right: 1px solid @gray-lighter;
    }

    > li:last-child ul {
        border-right: none;
    }

    > li > ul {
        padding:0;

        > li {
            list-style:none;

            a {
                color: @dropdown-link-color;
            }

            a:hover,
            a:focus {
                color: @dropdown-link-hover-color;
                background-color: @dropdown-link-hover-bg;
            }
        }
    }
}

@media (max-width: @screen-xs-max) {
    .navbar-nav .open .dropdown-menu {
        .box-shadow(@dropdown-shadow);
    }
}

